--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ streamlit>=1.36.0
 pandas>=2.0.0
 openai>=1.30.0
 pytest>=7.0.0
+python-dotenv>=1.0.1
+altair>=5.0.0
+reportlab>=4.0.0
+matplotlib>=3.8.0
